k8s-deploy/staging_mini_frontend/mini-frontend-staging-Deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: tilde-frontend-mini
  labels:
    app: tilde-frontend-mini
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tilde-frontend-mini
  template:
    metadata:
      labels:
        app: tilde-frontend-mini
    spec:
      containers:
        - name: tilde-frontend-mini-app
          image: gcr.io/umuzi-staging/tilde-frontend-mini-challenge:latest 
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          readinessProbe:
            # an http probe
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            timeoutSeconds: 5
