k8s-deploy/staging_mini_frontend/mini-frontend-staging-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tilde-frontend-mini-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: tilde-frontend-mini-ip
    networking.gke.io/managed-certificates: mini-frontend-managed-cert
    kubernetes.io/ingress.class: "gce"
  labels:
    app: tilde-frontend-mini
spec:
  defaultBackend:
    service:
      name: tilde-frontend-mini
      port:
        number: 3000
